--- a/app/views/qqapps/fanjiView.scala.html
+++ b/app/views/qqapps/fanjiView.scala.html
@@ -1,10 +1,5 @@
-@(user:Option[models.user.User],goods:models.goods.Goods,firstShareUser:models.user.User,tags:List[models.tag.TagGoods])
-@views.html.template(
-user,
-title =goods.name+"_食美特，爱美食爱生活",
-description = goods.intro
-
-)(css="/assets/css/template/goods.detail.css") {
+@(goods:models.goods.Goods,firstShareUser:models.user.User)
+@views.html.qqapps.template(title="反季节")(css="/assets/css/template/fanji.css") {
 
 <div class="container clearfix">
 
@@ -16,21 +11,10 @@ description = goods.intro
                 <div class="pic-box">
 
                     <a class="pic-link"  href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' target="_blank"  rel="nofollow">
-
                         @for(img<-goods.itemPics.split("&")){
-                        <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="460" />
+                        <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="430" />
                         }
                     </a>
-
-                    <div class="like-common like-common-s" id="J_likeCommon156391">
-                        <a  class="like" rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get" title="喜欢"><i>喜欢</i></a>
-                        <div class="like-num">
-                            <dl class="J_scrollUp">
-                                <dd class="J_FavorNum" data-val="@goods.loveNum">@goods.loveNum</dd>
-                                <dd>+1</dd>
-                            </dl>
-                        </div>
-                    </div>
                     <a class="bbl-btn pic-more" href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' >查看更多图片&gt;&gt;</a>
                 </div>
 
@@ -66,7 +50,13 @@ description = goods.intro
 
                          <dd class="go-to-buy">
                              <div class="price">
-                                 <span class="price-promotion"> ¥@goods.price</span>
+
+                                 @if(goods.promotionPrice.isEmpty){
+                                 <span class="price-normal"> ¥@goods.price</span>
+                                 }else{
+                                 <span class="price-promotion"> ¥@goods.promotionPrice.get </span>
+                                 <span class="price-normal"> ¥@goods.price </span>
+                                 }
                              </div>
 
                           <a class="buy-btn"  href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}'  target="_blank" rel="nofollow">去看看 &gt;&gt; </a>
@@ -74,7 +64,7 @@ description = goods.intro
                          </dd>
                      <dd class="shareTips">
 
-                         <a rel="nofollow" class="info-wrong" href="javascript:;" id="J_JiuCuo" data-proid="488">信息有误？</a>
+
                          <div class="share-link" data-sharetxt="@goods.name" data-sharepic="@goods.pic" data-sharelink="@controllers.routes.Goods.view(goods.id.get)">
                              <label class="fl l20 gc">分享到：</label>
                              <a class="s-sina fl" href="javascript:;" data-type="s-sina" alt="分享到新浪微博"></a>
