--- a/app/views/qqapps/fanji.scala.html
+++ b/app/views/qqapps/fanji.scala.html
@@ -1,7 +1,9 @@
 @(page:models.Page[(models.user.User,models.goods.Goods)],t:String,s:Int)
 @views.html.qqapps.template(title="反季节")(css="/assets/css/template/fanji.css") {
 <div class="container" id="fanji">
-
+    <div class="tag-banner">
+        <img src="/assets/ui/fanji/topbanner2.png">
+    </div>
     <section class="filter-wrap clearfix">
         <h2>@t</h2>
         <div class="goods-filter">
