--- a/app/views/qqapps/template.scala.html
+++ b/app/views/qqapps/template.scala.html
@@ -25,16 +25,14 @@
                 <div class="tag-nav">
 
                     <ul>
-                        <li>女装</li>
-                        <li>男装</li>
-                        <li>品牌</li>
+                        <li class="current"><a>女装</a></li>
+                        <li><a>男装</a></li>
+                        <li><a>品牌</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="tag-banner">
-                <img src="/assets/ui/fanji/topbanner.png">
-            </div>
+
         </div>
     </div>
 
