--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -29,7 +29,7 @@ description = goods.intro
                         }
                     </a>
                     }
-                    <div class="like-common like-common-s" id="J_likeCommon156391">
+                    <div class="like-common like-common-s">
                         <a  class="like" rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get" title="喜欢"><i>喜欢</i></a>
                         <div class="like-num">
                             <dl class="J_scrollUp">
