--- a/app/views/qqapps/fanji.scala.html
+++ b/app/views/qqapps/fanji.scala.html
@@ -5,7 +5,10 @@
         <img src="/assets/ui/fanji/topbanner2.png">
     </div>
     <section class="filter-wrap clearfix">
-        <h2>@t</h2>
+        <h2><a>女装</a></h2>
+        <h2><a>男装</a></h2>
+        <h2 class="on"><a>品牌</a></h2>
+
         <div class="goods-filter">
             <a type="list_default"   href='@controllers.routes.QQApps.fanji(t,1,1)' @if(s==1){ class="current" } ><span>推荐</span></a>
             <a type="list_new_most" href='@controllers.routes.QQApps.fanji(t,2,1)'  @if(s==2){class=" current"}><span>最新</span></a>
