--- a/app/views/admin/goods/editGoods.scala.html
+++ b/app/views/admin/goods/editGoods.scala.html
@@ -69,7 +69,12 @@
                     <input type="text" name="promotionPrice" value='@form("promotionPrice").value'>
                 </div>
             </div>
-
+            <div class="control-group">
+                <label class="control-label">推广链接</label>
+                <div class="controls">
+                    <input type="text" name="clickUrl" value='@form("clickUrl").value'>
+                </div>
+            </div>
 <div class="control-group">
     <label class="control-label" for="isMember">推荐理由</label>
     <div class="controls">
