--- a/app/views/admin/goods/list.scala.html
+++ b/app/views/admin/goods/list.scala.html
@@ -136,6 +136,7 @@
                     <option value="3">批量取消达人推荐</option>
                     <option value="4">批量删除</option>
                     <option value="5">批量修改返积分比例</option>
+                    <option value="6">批量修改淘客链接</option>
                 </select>
                 <button class="btn btn-info" id="J_batchAction" data-toggle="modal" data-target="#J_batchModal">
                     批量处理
