adjust fanjijie qqapp

--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -55,7 +55,9 @@
 <!--单个商品 start-->
     @for(goods<-page.items){
 <div class="today-goods-item clearfix">
-    <a href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' target="_blank">
+
+
+    <a  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.get'}); return false;">
         <img class="goods-item-img" src='@(goods.pic+"_310x310.jpg")' alt="@goods.name" width="300" height="@(goods.hwRate*300)"></a>
     <div class="goods-item-info">
         <h2 class="goods-item-title">
@@ -64,13 +66,13 @@
         </h2>
         <div class="goods-item-desc">
             <i class="quotation-marks"></i>
-            <a href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' target="_blank" class="desc-txt">
+            <a   class="desc-txt" href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.get'}); return false;">
                 @goods.intro
             </a>
 
         </div>
         <div class="goods-item-buy clearfix">
-            <a href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' class="goods-item-buy-btn clearfix" target="_blank">
+            <a  class="goods-item-buy-btn clearfix"  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.get'}); return false;">
 
                 @if(goods.promotionPrice.isEmpty){
                 <span class="current-price"> ¥@goods.price</span>
@@ -89,7 +91,7 @@
             </a>
             <div class="others-wrap">
                 <span class="want-to-buy">有<i>@goods.loveNum</i>人想买</span>
-                <a href='@if(goods.clickUrl.isEmpty || goods.clickUrl.get.trim==""){@goods.detailUrl}else{@goods.clickUrl.get}' class="others-say" target="_blank">看看买过的人怎么说&gt;&gt;</a>
+                <a  class="others-say"  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.get'}); return false;">看看买过的人怎么说&gt;&gt;</a>
             </div>
         </div>
     </div>
@@ -124,10 +126,10 @@
     </div>
     <div class="bt-logo" style="padding-bottom:20px;">
        <ul id="imgLinks">
-        <li class="item-1"><a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6rQAFeQY%2BZRJiORaoWPYsbF2g7OUNUzw2b5r9bjTtX6NlVD8Vy4UPnYXqRLKOf51E9wXOmJgnGJxDlfUS3GoIZY%2FBqJkpPtPjoDUV4RzfBR1gp5N7Xu0rwLEsNSBqY4fmSkx0u8pukmSVQYmw%2BVh16NmTddvtEmdfLv5Tz0aHeC9B48GlsQ3R3ONtaHf857ixIr6Jj14mhw4CIrvIwvXfdMYcemtsRjNyZIcBfO9mr0ZazjN%2FQwZKNjWKPsxf6hwfNF2rL%2B2bUFqRyAiEhmd8E4uH0BNTKJnl8LHHovTKz%2BpRjAUQW6OJjt%2BLNV8kCQ%3D%3D" target="_blank">衣服<i></i></a></li>
-        <li class="item-2"><a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oGdeCa8QWB40nychA6CWWoSYeqAQIqZAI%2B6HUrP3FVih9scPLbEOdg8JgLnkrxiPpRIpq4g%2BLYUEostBdZ8k2F4DNIPNj%2BU3DcgDitDg7unkHcEgSMX6sD20dltsf2wvqnlRCaa1lWDL2E2SNZmAV1n3R0P45S11gdraaUizNHxnLA6ETfn5l3zl8HWGWmPZ3JOllbgfUXej29sTN7mghpbB1rNGL5Cx%2FVuKmQp24Z6EsO%2BSVsVdcsyOt37LT%2F71c%2FLyoGsL54xp4PvzO4wMsrkcwTrP6hsJFVbgQP1ts%2BHqr50%3D" target="_blank">包包<i></i></a></li>
-        <li class="item-3"><a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oaOEDsNxjCDCov7AtbwizSASNxwHc%2BStnpTEvw4otusXOprSoDZVsuHPOdowty2iQ%2FmXl%2F75To0HmF2wPeMGyeC1jfyBVgicDhEgzf6VNO0djZQb3FYDSa%2BpkopHGKBM86JJAmAW5u3U93x4LUtPdB24xs6V%2BSWutA3lRYIgRi7LqqdeI6cO3OAjabbtCGHEMK9rOkWH5EIhbq6%2Fx1KK%2B1EH0ZVjp6FLmCQqxUOYV5mkh5PCcohNsyGgd99ZJFnALWCYPgHqMEPleJdsxM4799PDWBeTeAHa0Q%3D%3D" target="_blank">美鞋<i></i></a></li>
-        <li class="item-5"><a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oad1exFQ0z7zVKe38IYOPfT6w78dn%2BxzZ%2BtuKZhRnal8z%2FKTRYyjftfd5719QKVnKbuYxl4zJWLKLErSL21aTZsgVAl9chUstHH%2F89I%2FBl7hFDNapKOmqr%2FGh8XOwOxJsvliLg5e6xWJvxSZOdXqi4BDT4HotrsKKp%2Bt%2BpTVMfnw9MQ%3D" target="_blank">配饰<i></i></a></li>
+        <li class="item-1"><a href="javascript:void(0);" onclick="fusion2.nav.open({url : 'http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6rQAFeQY%2BZRJiORaoWPYsbF2g7OUNUzw2b5r9bjTtX6NlVD8Vy4UPnYXqRLKOf51E9wXOmJgnGJxDlfUS3GoIZY%2FBqJkpPtPjoDUV4RzfBR1gp5N7Xu0rwLEsNSBqY4fmSkx0u8pukmSVQYmw%2BVh16NmTddvtEmdfLv5Tz0aHeC9B48GlsQ3R3ONtaHf857ixIr6Jj14mhw4CIrvIwvXfdMYcemtsRjNyZIcBfO9mr0ZazjN%2FQwZKNjWKPsxf6hwfNF2rL%2B2bUFqRyAiEhmd8E4uH0BNTKJnl8LHHovTKz%2BpRjAUQW6OJjt%2BLNV8kCQ%3D%3D'}); return false;"    >衣服<i></i></a></li>
+        <li class="item-2"><a href="javascript:void(0);" onclick="fusion2.nav.open({url : 'http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oGdeCa8QWB40nychA6CWWoSYeqAQIqZAI%2B6HUrP3FVih9scPLbEOdg8JgLnkrxiPpRIpq4g%2BLYUEostBdZ8k2F4DNIPNj%2BU3DcgDitDg7unkHcEgSMX6sD20dltsf2wvqnlRCaa1lWDL2E2SNZmAV1n3R0P45S11gdraaUizNHxnLA6ETfn5l3zl8HWGWmPZ3JOllbgfUXej29sTN7mghpbB1rNGL5Cx%2FVuKmQp24Z6EsO%2BSVsVdcsyOt37LT%2F71c%2FLyoGsL54xp4PvzO4wMsrkcwTrP6hsJFVbgQP1ts%2BHqr50%3D'}); return false;">包包<i></i></a></li>
+        <li class="item-3"><a href="javascript:void(0);" onclick="fusion2.nav.open({url : 'http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oaOEDsNxjCDCov7AtbwizSASNxwHc%2BStnpTEvw4otusXOprSoDZVsuHPOdowty2iQ%2FmXl%2F75To0HmF2wPeMGyeC1jfyBVgicDhEgzf6VNO0djZQb3FYDSa%2BpkopHGKBM86JJAmAW5u3U93x4LUtPdB24xs6V%2BSWutA3lRYIgRi7LqqdeI6cO3OAjabbtCGHEMK9rOkWH5EIhbq6%2Fx1KK%2B1EH0ZVjp6FLmCQqxUOYV5mkh5PCcohNsyGgd99ZJFnALWCYPgHqMEPleJdsxM4799PDWBeTeAHa0Q%3D%3D'}); return false;" >美鞋<i></i></a></li>
+        <li class="item-5"><a href="javascript:void(0);" onclick="fusion2.nav.open({url : 'http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB05%2Bm7rfGGjlY60oHcc7bkKOQnNEhj6oad1exFQ0z7zVKe38IYOPfT6w78dn%2BxzZ%2BtuKZhRnal8z%2FKTRYyjftfd5719QKVnKbuYxl4zJWLKLErSL21aTZsgVAl9chUstHH%2F89I%2FBl7hFDNapKOmqr%2FGh8XOwOxJsvliLg5e6xWJvxSZOdXqi4BDT4HotrsKKp%2Bt%2BpTVMfnw9MQ%3D'}); return false;">配饰<i></i></a></li>
     </ul>
     </div>
 
