--- a/app/views/qqapps/template.scala.html
+++ b/app/views/qqapps/template.scala.html
@@ -18,6 +18,8 @@
     <script type="text/javascript" src="/assets/js/front/jquery.tools.min.js" ></script>
     <script type="text/javascript" src="/assets/js/front/qqapps/fanji.js"></script>
     <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
+    <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=100716416&platform=qzone"></script>
+
 </head>
 <body id="J_Page">
 
