--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -15,6 +15,7 @@
     <!--[if lt IE 9]>
     <script src="/assets/js/html5.js" type="text/javascript"></script>
     <![endif]-->
+    <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=100716416&platform=qzone"></script>
 </head>
 <body id="J_Page">
 
