--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -22,8 +22,7 @@
         <div class="container clearfix">
             <div class="hd-left">
                 <a href="/" class="logo">
-                    <span class="logo-img"> <img src="/assets/ui/logo.png"></span>
-                    <span class="logo-intro">美食&nbsp;生活&nbsp;社区</span>
+                    <span class="logo-img"> <img src="/assets/ui/logo2.png"></span>
                 </a>
 
             </div>
@@ -49,26 +48,24 @@
             <ul class="channel clearfix">
                 <li class=' @("on".when(nav == "index")) '><a href="/">首页</a></li>
                 <li><span>-</span></li>
-                <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.faxian("美食","tag",1,1)'>美食</a></li>
-                <li class='@("on".when(nav == "特产"))'><a href='@controllers.routes.Pages.faxian("特产","tag",1,1)'>特产</a></li>
+                <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.faxian("美食","tag",1,1)'>零食</a></li>
+                <li class='@("on".when(nav == "特产"))'><a href='@controllers.routes.Pages.faxian("特产","tag",1,1)'>食材</a></li>
                 <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.faxian("居家","tag",1,1)'>居家</a></li>
-                <li  class='@("on".when(nav == "好玩意"))'><a href='@controllers.routes.Pages.faxian("好玩意","tag",1,1)'>好玩意</a></li>
                 <li><span>-</span></li>
-                <li  class='choice @("on".when(nav == "choice"))'><a href='@controllers.routes.Pages.choice'>天天特价</a></li>
+                <li  class='choice @("on".when(nav == "choice"))'><a href='@controllers.routes.Pages.choice'>食谱</a></li>
                 <li><span>-</span></li>
 
                 <li class='@("on".when(nav == "miss"))'>  <a href="@controllers.routes.Pages.miss" >主题</a> </li>
                 <li><span>-</span></li>
-                <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >讨论吧</a></li>
+                <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >小站</a></li>
 
             </ul>
             <!-- 签到 -->
                 <a class="btn-checkIn fr" href="javascript:;" rel="checkIn">签到</a>
-            <!-- 查询返利 -->
-            <a class="btn-rebate fr" href="javascript:;" rel="rebateGoods">查返利</a>
+
             <!--分享宝贝-->
             <div class="shareIt fr">
-                <a  class="btn-sg" href="javascript:;">分享好东西<span class="arrow-dn"></span></a>
+                <a  class="btn-sg btn-rebate" href="javascript:;">分享好东西</a>
                 <ul class="dropdown shareit-dropdown" >
                     <li class="sg-li"><a rel="shareGoods" href="javascript:;" class="hd-share-goods">发布宝贝</a></li>
                     <li><a href="@controllers.routes.Themes.edit(0)" rel="createTheme" class="hd-create-topic">创作主题</a></li>
