--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -2381,7 +2381,7 @@ a:hover i.ico-likes {
 .header .hd-left {
     float: left;
     width: 235px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 .header .hd-right{
     float: right;
@@ -2390,9 +2390,9 @@ a:hover i.ico-likes {
 }
 #header .logo{
     display: block;
-    height: 50px;
+    height:35px;
     cursor: pointer;
-    line-height:50px;
+    line-height:35px;
     font-size: 17px;
     font-weight: bolder;
     color: #999;
@@ -2401,17 +2401,11 @@ a:hover i.ico-likes {
 #header .logo-img {
     display: block;
     float: left;
-    width: 87px;
-    height: 50px;
+    width: 200px;
+    height:35px;
 }
 
-#header .logo-intro{
-    display: block;
-    float: left;
-    color: #999;
-    height: 50px;
-    line-height: 50px;
-}
+
 
 
 
@@ -2542,11 +2536,9 @@ a:hover i.ico-likes {
 }
 
 #nav .channel .on a{
-    color: #5c6f09;
+    color: #688400;
 }
-#nav .channel li.china a.on{
-      color:#e60000;
-}
+
 
 /* channel end */
 #nav a.btn-checkIn {
@@ -2571,27 +2563,7 @@ a:hover i.ico-likes {
     _background: #92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
 }
 
-#nav a.btn-rebate {
-    display: block;
-    margin: 8px 0 0 5px;
-    height: 24px;
-    overflow: hidden;
-    line-height: 24px;
-    padding: 0 12px 0 26px;
-    color: #fff;
-    background: #5ad url(images/checkIn-status.png) 07px 2px no-repeat;
-    _background: #5ad url(images/checkIn-status-ie6.png) 07px 2px no-repeat;
-}
 
-#nav a.btn-rebate:hover {
-    text-decoration: none;
-    background: #5ad url(images/checkIn-status.png) 07px -23px no-repeat;
-    transition: bottom 0.3s;
-    -webkit-transition: bottom 0.3s;
-    -moz-transition: bottom 0.3s;
-    -o-transition: bottom 0.3s;
-    _background: #5ad url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
-}
 
 
 #nav a.checked {
@@ -2680,14 +2652,13 @@ a:hover i.ico-likes {
 #nav .person, #nav .regLogin a{color:#333}
 #nav .person .userPhoto { position:absolute;top:2px;left:2px; }
 #nav .person .userPhoto img { width:20px;height:20px; }
-#nav .person .arrow-dn, #nav .xiaoxi .arrow-dn ,#nav .btn-sg .arrow-dn{ position:absolute;width:24px;height:20px;top:2px;right:2px;background:url(images/arrow-d-x1.png) no-repeat center; }
+#nav .person .arrow-dn, #nav .xiaoxi .arrow-dn { position:absolute;width:24px;height:20px;top:2px;right:2px;background:url(images/arrow-d-x1.png) no-repeat center; }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
     #nav .person .arrow-dn, #nav .xiaoxi .arrow-dn { position:absolute;width:24px;height:20px;top:2px;right:2px;background:url(images/arrow-d-x2.png) no-repeat center;background-size: 6px 6px;}
 }
 #nav .person a.gohome { float:left;height:20px;line-height:20px;padding:0 24px 0 28px;max-width:100px;white-space:nowrap;word-wrap:normal;word-break:normal;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden; color:#333;}
-#nav .person a.gohome:hover, #nav .person .set-dropdown li a:hover, #nav .regLogin a:hover, #nav a.xiaoxi:hover,#nav a.btn-sg:hover, .dropdown li a:hover { color:#55aadd;text-decoration:none; }
+#nav .person a.gohome:hover, #nav .person .set-dropdown li a:hover, #nav .regLogin a:hover, #nav a.xiaoxi:hover, .dropdown li a:hover { color:#55aadd;text-decoration:none; }
 #nav .set-dropdown{ width: 86px}
-
 /* end */
 /*登陆后的消息*/
 #nav .xiaoxi-box { margin:8px 0 0 0;position:relative;height:20px;padding:2px 0;background:#fff;border:none;}
@@ -2720,7 +2691,9 @@ a:hover i.ico-likes {
 /*登录 注册 end*/
 /*分享宝贝*/
 #nav .shareIt { margin:8px 0 0 0;position:relative; }
+/*
 #nav a.btn-sg { display:block;height:24px;overflow:hidden;background:#fff;line-height:24px; text-align:center;position:relative;padding:0 26px 0 0;border:none;color:#333;text-decoration:none; width:61px}
+*/
 #nav .shareit-dropdown { width:86px; }
 #nav .shareit-dropdown li { margin:0 10px;padding:6px 0; }
 #nav .shareit-dropdown .sg-li { border-bottom:1px solid #F3F3F3; }
@@ -2736,7 +2709,26 @@ a:hover i.ico-likes {
 .dropdown li a { display:block;padding:7px 0;line-height:1.2;color:#666;border-bottom:1px solid #F3F3F3; }
 .dropdown li.last a { border:none; }
 
+#nav a.btn-rebate {
+    display: block;
+    height: 24px;
+    overflow: hidden;
+    line-height: 24px;
+    padding: 0 12px 0 26px;
+    color: #fff;
+    background: #5ad url(images/checkIn-status.png) 07px 2px no-repeat;
+    _background: #5ad url(images/checkIn-status-ie6.png) 07px 2px no-repeat;
+}
 
+#nav a.btn-rebate:hover {
+    text-decoration: none;
+    background: #5ad url(images/checkIn-status.png) 07px -23px no-repeat;
+    transition: bottom 0.3s;
+    -webkit-transition: bottom 0.3s;
+    -moz-transition: bottom 0.3s;
+    -o-transition: bottom 0.3s;
+    _background: #5ad url(images/checkIn-status-ie6.png) 07px -23px no-repeat;
+}
 
 /*全局 底部样式*/
 /*
